--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "npx playwright test",
-        "test:debug": "npx playwright test --debug",
+    "test:debug": "npx playwright test --debug",
     "test:ui": "npx playwright test --ui"
   },
   "author": "",
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@faker-js/faker": "^9.9.0",
     "@playwright/test": "^1.56.0",
-    "@types/node": "^24.7.1"
+    "@types/node": "^24.7.1",
+    "allure-playwright": "^3.4.2"
   }
 }
